; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-test/extr_driver.c_check_error.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-test/extr_driver.c_check_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"$ko_test\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"$kill_test\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_error(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @mrb_intern_lit(i32* %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @mrb_gv_get(i32* %5, i32 %7)
  store i32 %8, i32* %3, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @mrb_intern_lit(i32* %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @mrb_gv_get(i32* %9, i32 %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i64 @mrb_fixnum_p(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %1
  %17 = load i32, i32* %3, align 4
  %18 = call i64 @mrb_fixnum(i32 %17)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %28

20:                                               ; preds = %16
  %21 = load i32, i32* %4, align 4
  %22 = call i64 @mrb_fixnum_p(i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = call i64 @mrb_fixnum(i32 %25)
  %27 = icmp eq i64 %26, 0
  br label %28

28:                                               ; preds = %24, %20, %16, %1
  %29 = phi i1 [ false, %20 ], [ false, %16 ], [ false, %1 ], [ %27, %24 ]
  %30 = zext i1 %29 to i32
  ret i32 %30
}

declare dso_local i32 @mrb_gv_get(i32*, i32) #1

declare dso_local i32 @mrb_intern_lit(i32*, i8*) #1

declare dso_local i64 @mrb_fixnum_p(i32) #1

declare dso_local i64 @mrb_fixnum(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
